--- a/src/.umi/dumi/config.json
+++ b/src/.umi/dumi/config.json
@@ -92,6 +92,18 @@
               "meta": {}
             }
           ]
+        },
+        {
+          "title": "Type-script",
+          "path": "/type-script",
+          "meta": {},
+          "children": [
+            {
+              "path": "/type-script/ts",
+              "title": "TypeScript",
+              "meta": {}
+            }
+          ]
         }
       ]
     }
