--- a/src/.umi/dumi/config.json
+++ b/src/.umi/dumi/config.json
@@ -8,6 +8,28 @@
           "meta": {}
         },
         {
+          "title": "77",
+          "path": "/77",
+          "meta": {},
+          "children": [
+            {
+              "path": "/77/autowire",
+              "title": "Autowire",
+              "meta": {}
+            },
+            {
+              "path": "/77/jwt",
+              "title": "JWT",
+              "meta": {}
+            },
+            {
+              "path": "/77/合并分支",
+              "title": "合并分支",
+              "meta": {}
+            }
+          ]
+        },
+        {
           "title": "Babel",
           "path": "/babel",
           "meta": {},
@@ -26,7 +48,19 @@
           ]
         },
         {
-          "title": "Go",
+          "title": "Generator",
+          "path": "/generator",
+          "meta": {},
+          "children": [
+            {
+              "path": "/generator",
+              "title": "分享根本不常用知识之 Generator",
+              "meta": {}
+            }
+          ]
+        },
+        {
+          "title": "GO",
           "path": "/go",
           "meta": {},
           "children": [
@@ -94,13 +128,18 @@
           ]
         },
         {
-          "title": "Type-script",
+          "title": "TypeScript",
           "path": "/type-script",
           "meta": {},
           "children": [
             {
               "path": "/type-script/ts",
-              "title": "TypeScript",
+              "title": "Ts",
+              "meta": {}
+            },
+            {
+              "path": "/type-script/work-study",
+              "title": "WorkStudy",
               "meta": {}
             }
           ]
@@ -119,6 +158,7 @@
   "logo": "https://user-images.githubusercontent.com/9554297/83762004-a0761b00-a6a9-11ea-83b4-9c8ff721d4b8.png",
   "mode": "doc",
   "repository": {
+    "url": "",
     "branch": "master"
   },
   "theme": {}
