--- a/src/.umi/dumi/config.json
+++ b/src/.umi/dumi/config.json
@@ -13,8 +13,38 @@
           "meta": {},
           "children": [
             {
+              "path": "/77/2022.4",
+              "title": "2022.4.18分享",
+              "meta": {}
+            },
+            {
               "path": "/77/autowire",
               "title": "Autowire",
+              "meta": {}
+            },
+            {
+              "path": "/77/channel",
+              "title": "协程",
+              "meta": {}
+            },
+            {
+              "path": "/77/debug分享",
+              "title": "debug",
+              "meta": {}
+            },
+            {
+              "path": "/77/git",
+              "title": "git 是什么?",
+              "meta": {}
+            },
+            {
+              "path": "/77/go常规泛型",
+              "title": "Go常规泛型",
+              "meta": {}
+            },
+            {
+              "path": "/77/graphiql",
+              "title": "graphiql 缓存跟踪",
               "meta": {}
             },
             {
@@ -23,8 +53,33 @@
               "meta": {}
             },
             {
+              "path": "/77/yaml",
+              "title": "插件分享",
+              "meta": {}
+            },
+            {
+              "path": "/77/从搜索谈到自行车维修",
+              "title": "从搜索谈到自行车维修",
+              "meta": {}
+            },
+            {
+              "path": "/77/你可能不知道的_sourcemap",
+              "title": "名人名言",
+              "meta": {}
+            },
+            {
               "path": "/77/合并分支",
               "title": "合并分支",
+              "meta": {}
+            },
+            {
+              "path": "/77/奇怪的_fiber",
+              "title": "奇怪的 fiber",
+              "meta": {}
+            },
+            {
+              "path": "/77/文件上传",
+              "title": "文件上传",
               "meta": {}
             }
           ]
